Anonymous | Login | 2021-01-18 08:11 MSK | ![]() |
My View | View Issues | Change Log | Roadmap |
View Issue Details [ Jump to Notes ] | [ Issue History ] [ Print ] | ||||||||||||
ID | Project | Category | View Status | Date Submitted | Last Update | ||||||||
0024524 | Open CASCADE | [OCCT] OCCT:Modeling Algorithms | public | 2014-01-10 11:13 | 2020-09-14 22:58 | ||||||||
Reporter | pkv | ||||||||||||
Assigned To | nbv | ||||||||||||
Priority | normal | Severity | minor | ||||||||||
Status | assigned | Resolution | open | ||||||||||
Platform | Windows | OS | VC++ 2008 | OS Version | 32 bit | ||||||||
Product Version | [OCCT] 6.7.0 | ||||||||||||
Target Version | [OCCT] 7.6.0* | Fixed in Version | |||||||||||
Summary | 0024524: Parallelization of 'checkshape' algorithm. | ||||||||||||
Description | The command 'checkshape' is widely-used (applications, grid-tests, development, debug...). The performance of the command is bad does not meet the modern demands. The performance of the command 'checkshape' (and underlying algorithm BRepCheck_Analyzer) should be improved by parallelization. | ||||||||||||
Steps To Reproduce | Use the following commands to reproduce the problem: # source z20.tcl checkshape r # # it takes ~ 13 min on current dev version # #------------ # take the script z20.tcl in: # http://tracker.dev.opencascade.org/view.php?id=24157 [^] # | ||||||||||||
Tags | No tags attached. | ||||||||||||
Test case number | bugs modalg_5 bug24157_4 | ||||||||||||
Attached Files | |||||||||||||
![]() |
|
(0027448) ifv (developer) 2014-01-13 09:52 |
Dear nbv, please analyse reason of bad performance. |
![]() |
|||
Date Modified | Username | Field | Change |
2014-01-10 11:13 | pkv | New Issue | |
2014-01-10 11:13 | pkv | Assigned To | => ifv |
2014-01-13 09:47 | ifv | Assigned To | ifv => nbv |
2014-01-13 09:47 | ifv | Status | new => assigned |
2014-01-13 09:52 | ifv | Note Added: 0027448 | |
2014-01-13 09:55 | vsr | Steps to Reproduce Updated | View Revisions |
2014-03-24 15:23 | bugmaster | Project | Salome => Open CASCADE |
2014-04-04 18:09 | abv | Target Version | 6.7.1 => 6.8.0 |
2014-09-11 09:47 | abv | Target Version | 6.8.0 => 7.1.0 |
2016-10-25 19:04 | msv | Target Version | 7.1.0 => 7.2.0 |
2017-07-24 09:33 | msv | Target Version | 7.2.0 => 7.3.0 |
2017-11-01 20:06 | mkv | Test case number | => bugs modalg_5 bug24157_4 |
2017-12-05 17:08 | msv | Target Version | 7.3.0 => 7.4.0 |
2019-08-12 16:37 | msv | Target Version | 7.4.0 => 7.5.0 |
2020-09-14 22:58 | msv | Target Version | 7.5.0 => 7.6.0* |
Copyright © 2000 - 2021 MantisBT Team |