0024524: Parallelization of 'checkshape' algorithm.

Parallelization of "Intersect(...)" function calling.